types/testdata/journey/crashers/edf90467f065ecd656b1a49052393ee870bbdb04.output
panic: runtime error: invalid memory address or nil pointer dereference [recovered]
	panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x10 pc=0x4f841e]

goroutine 1 [running]:
encoding/json.(*decodeState).unmarshal.func1(0xc420097c08)
	/tmp/go-fuzz-build056242195/goroot/src/encoding/json/decode.go:170 +0x181
panic(0x521ca0, 0x5e4fd0)
	/tmp/go-fuzz-build056242195/goroot/src/runtime/panic.go:489 +0x2cf
github.com/twpayne/go-geom/encoding/geojson.(*Geometry).Decode(0xc42000a9e0, 0xf, 0xed0817d40, 0x0, 0x0)
	/tmp/go-fuzz-build056242195/gopath/src/github.com/twpayne/go-geom/encoding/geojson/geojson.go:110 +0x1ce
github.com/govitia/navitia/types.(*Section).UnmarshalJSON(0xc42008c240, 0x7fdfc6945928, 0x253e, 0x1ff6d8, 0x0, 0x7fdfc68f9000)
	/tmp/go-fuzz-build056242195/gopath/src/github.com/govitia/navitia/types/section_json.go:76 +0x451
encoding/json.(*decodeState).object(0xc420062240, 0x53a4c0, 0xc42008c240, 0x199)
	/tmp/go-fuzz-build056242195/goroot/src/encoding/json/decode.go:598 +0x2592
encoding/json.(*decodeState).value(0xc420062240, 0x53a4c0, 0xc42008c240, 0x199)
	/tmp/go-fuzz-build056242195/goroot/src/encoding/json/decode.go:402 +0x49a
encoding/json.(*decodeState).array(0xc420062240, 0x50fb20, 0xc4200560b0, 0x196)
	/tmp/go-fuzz-build056242195/goroot/src/encoding/json/decode.go:555 +0x384
encoding/json.(*decodeState).value(0xc420062240, 0x50fb20, 0xc4200560b0, 0x196)
	/tmp/go-fuzz-build056242195/goroot/src/encoding/json/decode.go:399 +0x3fd
encoding/json.(*decodeState).object(0xc420062240, 0x512f60, 0xc420056070, 0x16)
	/tmp/go-fuzz-build056242195/goroot/src/encoding/json/decode.go:733 +0x19a6
encoding/json.(*decodeState).value(0xc420062240, 0x512f60, 0xc420056070, 0x16)
	/tmp/go-fuzz-build056242195/goroot/src/encoding/json/decode.go:402 +0x49a
encoding/json.(*decodeState).unmarshal(0xc420062240, 0x512f60, 0xc420056070, 0x0, 0x0)
	/tmp/go-fuzz-build056242195/goroot/src/encoding/json/decode.go:184 +0x354
encoding/json.Unmarshal(0x7fdfc6945000, 0x4486, 0x200000, 0x512f60, 0xc420056070, 0x35e0f2e2e8f0ee3, 0x2c710f9013b10c5)
	/tmp/go-fuzz-build056242195/goroot/src/encoding/json/decode.go:104 +0x1a6
github.com/govitia/navitia/types.(*Journey).UnmarshalJSON(0xc420001a00, 0x7fdfc6945000, 0x4486, 0x200000, 0x59020def, 0x17d1965e)
	/tmp/go-fuzz-build056242195/gopath/src/github.com/govitia/navitia/types/journeys_json.go:51 +0x16f
github.com/govitia/navitia/types.FuzzJourney(0x7fdfc6945000, 0x4486, 0x200000, 0x520f40)
	/tmp/go-fuzz-build056242195/gopath/src/github.com/govitia/navitia/types/journeys_fuzz.go:9 +0x75
go-fuzz-dep.Main(0x54d8a8)
	/tmp/go-fuzz-build056242195/goroot/src/go-fuzz-dep/main.go:49 +0xde
main.main()
	/tmp/go-fuzz-build056242195/gopath/src/github.com/govitia/navitia/types/go.fuzz.main/main.go:10 +0x2d
exit status 2